[package]
name = "ruckup"
version = "0.0.0"
authors = ["Richard Petrie <rap1011@ksu.edu>"]

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "ruckup"
path = "src/bin.rs"

[dependencies]
rust_sodium = "0.1.2"
rustc-serialize = "0.3"
preferences = "0.7.2"
app_dirs = "^1.1.1"
clap = {version = "2.18", features = ["yaml"]}
walkdir = "0.1.8"